--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 [<a href="#address">Address</a>]
 </h4>
 
-<a href="mailto:chuzhufei@nbu.edu.cn">E-Mail: <b>chuzhufei@nbu.edu.cn</b></a> <br>
+<a href="mailto:chuzhufei@nbu.edu.cn">Email: <b>chuzhufei@nbu.edu.cn</b></a> <br>
 Phone:(+86 574)8760-9496<br>
 
 <br>
@@ -111,11 +111,11 @@ Logic Synthesis, Physical Design, FPGA Synthesis, Emerging Nanotechnologies<br>
 
 <h2> <a name="tutorials">Tutorials</a> 
 </h2>
-<li>The <A HREF="https://www.eda2.com/iseda2024/tutorials.html">“Boolean Satisfiability Solving, State-of-the-Art”</a> Tutorial organized by Ningbo University, The Chinese University of Hong Kong, and Institute of Software, Chinese Academy of Sciences is presented at <A
+<li>The <A HREF="https://www.eda2.com/iseda2024/tutorials.html">"Boolean Satisfiability Solving, State-of-the-Art"</a> Tutorial organized by Ningbo University, The Chinese University of Hong Kong, and Institute of Software, Chinese Academy of Sciences is presented at <A
   HREF="https://www.eda2.com/conferenceHome/">ISEDA'24</a> on May 10th, 2024.
  </li>
-<li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">“Logic Synthesis Tools and Techniques: Insights from Academia and
-    Industry”</a> Tutorial organized by Ningbo University and Giga
+<li>The <A HREF="https://www.eda2.com/conferenceHome/program/detail?key=tutorial2">"Logic Synthesis Tools and Techniques: Insights from Academia and
+    Industry"</a> Tutorial organized by Ningbo University and Giga
 Design Automation is presented at <A
   HREF="https://www.eda2.com/conferenceHome/">ISEDA'23</a> on May 8th, 2023.
 <a href="ISEDA2023.pdf" download >[handouts]</a>, 
@@ -257,43 +257,45 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
    <h3> 2025 </h3>
    <p class="big">
 	   <li>Hongyang Pan, Sen Liu, Yong Xiao, Yun Shao, Keren Zhu, Fan Yang, Xuan Zeng and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Rethinking Logic Rewriting: Technology-Aware Subgraph Matching with Exact Synthesis", <i>ACM Transactions on Design Automation of Electronic Systems
-     </i>, <strong>TODAES</strong>, 2025, Accepted for publication.</li>
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://dl.acm.org/doi/full/10.1145/3749103">Rethinking Logic Rewriting: Technology-Aware Subgraph Matching with Exact Synthesis</a>", <i>ACM Transactions on Design Automation of Electronic Systems
+     </i>, <strong>TODAES</strong>, August 2025, 30(5): 77:1-77:29.</li>
+	 <li>Tingting Liu and <A
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://www.sciencedirect.com/science/article/abs/pii/S1879239125000025">Implication logic synthesis and optimization methods for memristor-based logic circuits</a>", <i>Microelectronics Journal</i>, March 2025, 157: 106553.</li>
 	   <li> Zhengyuan Shi, Chengyu Ma, Ziyang Zheng, Lingfeng Zhou, Hongyang Pan, Wentao Jiang, Fan Yang, Xiaoyan Yang, <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DeepCell: Self-Supervised Multiview Fusion for Circuit Representation Learning", <strong> ICCAD' 25</strong>, 
 		   <i>International Conference on Computer-Aided Design</i>, Munich, Germany, Oct. 2025.</li>
 	   <li>
 		   Zhengyuan Shi, Jiangwentao, Xindi Zhang, Jin Luo, Yun Liang, <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "DynamicSAT: Dynamic Configuration Tuning for SAT Solving", <strong> CP' 25</strong>, 
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, and Qiang Xu, "<A HREF="https://drops.dagstuhl.de/storage/00lipics/lipics-vol340-cp2025/LIPIcs.CP.2025.34/LIPIcs.CP.2025.34.pdf">DynamicSAT: Dynamic Configuration Tuning for SAT Solving</a>", <strong> CP' 25</strong>, 
 		   <i>The 31st International Conference on Principles and Practice of Constraint Programming</i>, Glasgow, Scotland, Aug. 2025.
 	   </li>
 	   	   <li>
 			   Zeju Li, Changran Xu, Zhengyuan Shi, Zedong Peng, Yi Liu, Yunhao Zhou, Lingfeng Zhou, Chengyu Ma, Jianyuan Zhong, Xi Wang, Jieru Zhao, <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xiaoyan Yang, and Qiang Xu, "DeepCircuitX: A Comprehensive Repository-Level Dataset for RTL Code Understanding, Generation, and PPA Analysis", <strong> LAD' 25</strong>, <i>IEEE International Conference on LLM-Aided Design</i>, Stanford, CA, USA, June 2025.
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, Xiaoyan Yang, and Qiang Xu, "<A HREF="https://ieeexplore.ieee.org/document/11105939">DeepCircuitX: A Comprehensive Repository-Level Dataset for RTL Code Understanding, Generation, and PPA Analysis</a>", <strong> LAD' 25</strong>, <i>IEEE International Conference on LLM-Aided Design</i>, Stanford, CA, USA, June 2025.
 		   </li>
 		   <li>
 			   Jiaxin Peng, Zhang Hu, Yinshui Xia, Lunyao Wang, and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"SAT-Sweeping Based on XOR-Majority Graph", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"<A HREF="https://ieeexplore.ieee.org/document/11100963">SAT-Sweeping Based on XOR-Majority Graph</a>", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
 		   </li>
 		   <li>
 			   Chengkai Qiu, Yanzhen Wang, Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"STPSim: Accelerating Circuit Simulation via Semi-Tensor Product-Based Parallelism", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"<A HREF="https://ieeexplore.ieee.org/document/11100908">STPSim: Accelerating Circuit Simulation via Semi-Tensor Product-Based Parallelism</a>", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
 		   </li>
 		   <li>
 			   Haonan Wei, Wentao Jiang,  Zhang Hu, Zhengyuan Shi, Yinshui Xia, Lunyao Wang, and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"Auto-CEC: Combinational Equivalence Checking via Intelligent Sweeping Engine Selection", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"<A HREF="https://ieeexplore.ieee.org/document/11100798">Auto-CEC: Combinational Equivalence Checking via Intelligent Sweeping Engine Selection</a>", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
 		   </li>
 		   <li>
 			   Chen Lv, Chengyu Ma, Hongyang Pan, Yinshui Xia, Lunyao Wang, and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"Area-oriented Boolean Resubstitution with Efficient Dependency Function Computation", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>，"<A HREF="https://ieeexplore.ieee.org/document/11101222">Area-oriented Boolean Resubstitution with Efficient Dependency Function Computation</a>", <strong> ISEDA' 25</strong>,  <i>IEEE International Symposium of EDA</i>, May 2025, Hong Kong, China.
 		   </li>
 		   <li>
 	   	Zhang Hu, Hongyang Pan, Yinshui Xia, Lunyao Wang and <A
-	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "Mixed Structural Choice Operator: Enhancing Technology Mapping with Heterogeneous Representations",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
+	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://ieeexplore.ieee.org/document/11133368">Mixed Structural Choice Operator: Enhancing Technology Mapping with Heterogeneous Representations</a>",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
 	   	   </li>
 	   <li>
 Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yuan, <A
-       HREF="https://zfchu.github.io/">Zhufei Chu</a> and Qiang Xu, "Logic Optimization Meets SAT: A Novel Framework for Circuit-SAT Solving",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
+       HREF="https://zfchu.github.io/">Zhufei Chu</a> and Qiang Xu, "<A HREF="https://ieeexplore.ieee.org/document/11133310">Logic Optimization Meets SAT: A Novel Framework for Circuit-SAT Solving</a>",  <strong> DAC' 25</strong>, <i>ACM/IEEE Design Automation Conference</i>, San Francisco, USA, June 2025. 
 	   </li>
      <li>
        Liwei Ni, Rui Wang, Miao Liu, Xingyu Meng, Xiaoze Lin, Junfeng Liu,
@@ -306,7 +308,7 @@ Zhengyuan Shi, Tiebing Tang, Jiaying Zhu, Sadaf Khan, Hui-Ling Zhen, Mingxuan Yu
    <li>
      Hongyang Pan, Keren Zhu, Fan Yang,  <A
        HREF="https://zfchu.github.io/">Zhufei Chu</a> and Xuan Zeng,
-     "ELMap: Area-Driven LUT Mapping with k-LUT Network Exact Synthesis",
+     "<A HREF="https://ieeexplore.ieee.org/document/10993190">ELMap: Area-Driven LUT Mapping with k-LUT Network Exact Synthesis</a>",
      <strong> DATE' 25</strong>, <i>2025 Design, Automation
        and Test in Europe Conference</i>, Lyon, France, Mar. 2025. 
    </li>
