--- a/index.html
+++ b/index.html
@@ -247,6 +247,10 @@ style="width:1em;margin-right:.5em;" alt="ORCID iD icon">[orcid]</a>
 <p>
 <OL>
 	  <h3> 2026 </h3>
+      <li>
+        Jiaxiang Pan, Yinshui Xia, Lunyao Wang, and <A HREF="https://zfchu.github.io">Zhufei Chu</a>, "LV-MAGIC: Logic Synthesis and Verification for MAGIC based In-Memory Computing",  <i> IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems
+      </i>, <strong>TCAD</strong>, Accepted for publication.
+        </li>
 	  <li>Qiyao He, Zhang Hu, Yinshui Xia, Lunyao Wang, and <A
 	          HREF="https://zfchu.github.io/">Zhufei Chu</a>, "<A HREF="https://www.sciencedirect.com/science/article/abs/pii/S0167926025002378">Enhancing Logic Optimization of Alliance Tool based on Directed Acyclic Graphs</a> ", <i>Integration, the VLSI Journal </i>,  Volume 106, January 2026, 102580.  </li>
    <li> Lingfeng Zhou, Yilong Zhou, Hao Gong, Zhengyuan Shi, Qiang Xu, <A
@@ -361,8 +365,7 @@ Evangeline F.Y. Young, Bei Yu, Mingxuan Yuan, Haoyi Zhang, Zuodong Zhang, Yuxian
   <li>
     <A HREF="https://zfchu.github.io/">储著飞</a>, 马铖昱, 闫鸣, 潘家祥,
        潘鸿洋, 王伦耀, 夏银水，"<A
-       HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT231457">基于半张量积的逻辑综合研究进展</a>"，<i>电子与信息学报</i>，2024,
-     在线发表.
+       HREF="https://jeit.ac.cn/cn/article/doi/10.11999/JEIT231457">基于半张量积的逻辑综合研究进展</a>"，<i>电子与信息学报</i>，2024, 46(09):3490-3502.
 </li>
 <li>
 Huali Duan, Erping Li, Qinyi Huang, Da Li, <A HREF="https://zfchu.github.io/">Zhufei Chu</a>, Jian Wang, and Wenchao Chen, 
@@ -716,6 +719,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
     Automation Conference, 2020-2023. </li>
   <li>Reviewer for the journal IEEE Transactions on Computer-Aided Design of Integrated Circuits and Systems. </li>
   <li>Reviewer for the journal IEEE Transactions on Very Large Scale Integration (VLSI) Systems. </li>
+  <li>Reviewer for the journal IEEE Transactions on Information Forensics and Security. </li>
   <li>Reviewer for the journal IEEE Transactions on Emerging Topics in Computing. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part I. </li>
   <li>Reviewer for the journal IEEE Transactions on Circuits and Systems-Part II. </li>
