--- a/index.html
+++ b/index.html
@@ -131,7 +131,9 @@ Design Automation is presented at <A
 
   <UL id="newsList">
     <p class="big">
-	<li>July 2025, I will serve as the General Chair of IWLS'26</a> (Hongkong, 2026).</li>
+		<li>Jan. 2026, Invited to serve as a Guest Editor of Intergration, the VLSI Journal.</li>
+	<li>July 2025, I will serve as the General Chair of <A
+        HREF="https://www.iwls.org/iwls2026/">IWLS'26</a></a> (Hong Kong, 2026).</li>
 	<li>July 2025, I will serve as the Organizing Chair of <A
         HREF="https://conf.ccf.org.cn/ccfdac2025">CCFDAC'25</a> (Ningbo, Oct 2025).</li>
       <li> July 2025, Invited to serve as a TPC member of <A
@@ -698,6 +700,7 @@ Scale Integration Systems (<strong>TVLSI</strong>)</i>,
 <h2><a name="services">Professional Services</a></h2>
 <ul> 
   <p class="big">
+	   <li>General Chair for the International Workshop on Logic and Synthesis, 2026.</li>
   <li>Proceedings Chair, TPC member, and Session Chair  for the International Workshop on Logic and Synthesis, 2019-2021.</li>
    <li>Finance Chair, TPC member, and Session Chair  for the International
      Workshop on Logic and Synthesis, 2022-2023.</li>
